--- a/adb/adb.vcxproj
+++ b/adb/adb.vcxproj
@@ -158,13 +158,20 @@
     <ClCompile Include="diagnose_usb.cpp" />
     <ClCompile Include="errors_windows.cpp" />
     <ClCompile Include="fdevent.cpp" />
+    <ClCompile Include="fdevent_poll.cpp" />
     <ClCompile Include="file.cpp" />
+    <ClCompile Include="interface_info.cc" />
     <ClCompile Include="key.cpp" />
     <ClCompile Include="key_type.pb.cc" />
     <ClCompile Include="logging.cpp" />
+    <ClCompile Include="mdnsresponder_client.cpp" />
     <ClCompile Include="mdns_service_info.cpp" />
     <ClCompile Include="mdns_service_watcher.cpp" />
     <ClCompile Include="parsenetaddress.cpp" />
+    <ClCompile Include="rsa_2048_key.cpp" />
+    <ClCompile Include="services.cpp" />
+    <ClCompile Include="service_dispatcher.cc" />
+    <ClCompile Include="sockets.cpp" />
     <ClCompile Include="socket_spec.cpp" />
     <ClCompile Include="stat.cpp" />
     <ClCompile Include="std_util.cc" />
@@ -176,6 +183,7 @@
     <ClCompile Include="transport_local.cpp" />
     <ClCompile Include="transport_mdns.cpp" />
     <ClCompile Include="transport_usb.cpp" />
+    <ClCompile Include="types.cpp" />
     <ClCompile Include="usb_windows.cpp" />
     <ClCompile Include="utf8.cpp" />
     <ClCompile Include="x509_generator.cpp" />
@@ -184,6 +192,7 @@
     <ClInclude Include="adb.h" />
     <ClInclude Include="adb_api.h" />
     <ClInclude Include="adb_auth.h" />
+    <ClInclude Include="adb_ca_list.h" />
     <ClInclude Include="adb_client.h" />
     <ClInclude Include="adb_io.h" />
     <ClInclude Include="adb_known_hosts.pb.h" />
@@ -200,22 +209,29 @@
     <ClInclude Include="collections.h" />
     <ClInclude Include="commandline.h" />
     <ClInclude Include="config.h" />
+    <ClInclude Include="constants.h" />
+    <ClInclude Include="conversion_layer.h" />
     <ClInclude Include="diagnose_usb.h" />
     <ClInclude Include="dirent-win32.h" />
+    <ClInclude Include="dns_data_graph.h" />
+    <ClInclude Include="dns_sd.h" />
     <ClInclude Include="dns_sd_instance.h" />
     <ClInclude Include="dns_sd_instance_endpoint.h" />
+    <ClInclude Include="dns_sd_publisher.h" />
     <ClInclude Include="dns_sd_querier.h" />
     <ClInclude Include="dns_sd_service.h" />
     <ClInclude Include="dns_sd_service_factory.h" />
     <ClInclude Include="dns_sd_service_watcher.h" />
     <ClInclude Include="dns_sd_txt_record.h" />
     <ClInclude Include="endian.h" />
+    <ClInclude Include="env.h" />
     <ClInclude Include="error.h" />
     <ClInclude Include="errors.h" />
     <ClInclude Include="fdevent.h" />
     <ClInclude Include="fdevent_poll.h" />
     <ClInclude Include="file.h" />
     <ClInclude Include="hashing.h" />
+    <ClInclude Include="instance_key.h" />
     <ClInclude Include="interface_info.h" />
     <ClInclude Include="ip_address.h" />
     <ClInclude Include="key.h" />
@@ -223,11 +239,17 @@
     <ClInclude Include="logging.h" />
     <ClInclude Include="macros.h" />
     <ClInclude Include="mapped_file.h" />
+    <ClInclude Include="mdns_constants.h" />
+    <ClInclude Include="mdns_domain_confirmed_provider.h" />
+    <ClInclude Include="mdns_records.h" />
+    <ClInclude Include="mdns_record_changed_callback.h" />
+    <ClInclude Include="mdns_service.h" />
     <ClInclude Include="mdns_service_info.h" />
     <ClInclude Include="mdns_service_watcher.h" />
     <ClInclude Include="mdns_utils.h" />
     <ClInclude Include="network.h" />
     <ClInclude Include="network_interface.h" />
+    <ClInclude Include="network_interface_config.h" />
     <ClInclude Include="no_destructor.h" />
     <ClInclude Include="off64_t.h" />
     <ClInclude Include="pairing_client.h" />
@@ -235,9 +257,15 @@
     <ClInclude Include="parseint.h" />
     <ClInclude Include="parsenetaddress.h" />
     <ClInclude Include="properties.h" />
+    <ClInclude Include="publisher_impl.h" />
+    <ClInclude Include="querier_impl.h" />
     <ClInclude Include="reporting_client.h" />
     <ClInclude Include="rsa_2048_key.h" />
     <ClInclude Include="serial_delete_ptr.h" />
+    <ClInclude Include="services.h" />
+    <ClInclude Include="service_dispatcher.h" />
+    <ClInclude Include="service_instance.h" />
+    <ClInclude Include="service_key.h" />
     <ClInclude Include="socket.h" />
     <ClInclude Include="sockets.h" />
     <ClInclude Include="socket_spec.h" />
