--- a/adb/adb.vcxproj.filters
+++ b/adb/adb.vcxproj.filters
@@ -79,12 +79,6 @@
     <Filter Include="proto">
       <UniqueIdentifier>{a5e92974-0173-4bf2-b7dd-3227b59d2a98}</UniqueIdentifier>
     </Filter>
-    <Filter Include="mdnsresponder">
-      <UniqueIdentifier>{dc3999a4-3577-466f-adb9-2b43d1028911}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="mdnsresponder\mDNSShared">
-      <UniqueIdentifier>{75ba4aaa-20ac-45a9-b3bf-d92fba315553}</UniqueIdentifier>
-    </Filter>
     <Filter Include="discovery\dnssd\impl">
       <UniqueIdentifier>{d0be6ece-3c57-4ab8-8f3b-80753e9c531b}</UniqueIdentifier>
     </Filter>
@@ -93,6 +87,15 @@
     </Filter>
     <Filter Include="discovery\mdns\public">
       <UniqueIdentifier>{aa442487-0d28-4e8a-ae05-644bcbb0de83}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="platform\impl">
+      <UniqueIdentifier>{1b318cbc-2d2c-49c0-b0a4-4498dcb4739b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pairing_auth">
+      <UniqueIdentifier>{009d0174-eb4e-4f2c-a883-8e4563dd4e8a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="pairing">
+      <UniqueIdentifier>{d8dd3e57-71b3-4fec-9afc-189595d66250}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -227,6 +230,51 @@
     </ClCompile>
     <ClCompile Include="interface_info.cc">
       <Filter>platform\base</Filter>
+    </ClCompile>
+    <ClCompile Include="mdns_utils.cpp">
+      <Filter>client</Filter>
+    </ClCompile>
+    <ClCompile Include="adb_ca_list.cpp">
+      <Filter>tls</Filter>
+    </ClCompile>
+    <ClCompile Include="error.cc">
+      <Filter>platform\base</Filter>
+    </ClCompile>
+    <ClCompile Include="ip_address.cc">
+      <Filter>platform\base</Filter>
+    </ClCompile>
+    <ClCompile Include="env.cpp">
+      <Filter>sysdeps</Filter>
+    </ClCompile>
+    <ClCompile Include="network_interface.cc">
+      <Filter>platform\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="network_interface_win.cc">
+      <Filter>platform\api</Filter>
+    </ClCompile>
+    <ClCompile Include="service_instance.cc">
+      <Filter>discovery\dnssd\impl</Filter>
+    </ClCompile>
+    <ClCompile Include="tls_connection.cpp">
+      <Filter>tls</Filter>
+    </ClCompile>
+    <ClCompile Include="pairing_client.cpp">
+      <Filter>client\pairing</Filter>
+    </ClCompile>
+    <ClCompile Include="pairing_connection.cpp">
+      <Filter>pairing_connection</Filter>
+    </ClCompile>
+    <ClCompile Include="pairing.pb.cc">
+      <Filter>proto</Filter>
+    </ClCompile>
+    <ClCompile Include="pairing_auth.cpp">
+      <Filter>pairing_auth</Filter>
+    </ClCompile>
+    <ClCompile Include="aes_128_gcm.cpp">
+      <Filter>pairing_auth</Filter>
+    </ClCompile>
+    <ClCompile Include="mdns_service_impl.cc">
+      <Filter>discovery\mdns</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -470,9 +518,6 @@
     <ClInclude Include="adb_ca_list.h">
       <Filter>tls</Filter>
     </ClInclude>
-    <ClInclude Include="dns_sd.h">
-      <Filter>mdnsresponder\mDNSShared</Filter>
-    </ClInclude>
     <ClInclude Include="env.h">
       <Filter>sysdeps</Filter>
     </ClInclude>
@@ -523,6 +568,45 @@
     </ClInclude>
     <ClInclude Include="service_key.h">
       <Filter>discovery\dnssd\impl</Filter>
+    </ClInclude>
+    <ClInclude Include="pairing_auth.h">
+      <Filter>pairing_auth</Filter>
+    </ClInclude>
+    <ClInclude Include="pairing.pb.h">
+      <Filter>proto</Filter>
+    </ClInclude>
+    <ClInclude Include="aes_128_gcm.h">
+      <Filter>pairing</Filter>
+    </ClInclude>
+    <ClInclude Include="mdns_service_impl.h">
+      <Filter>discovery\mdns</Filter>
+    </ClInclude>
+    <ClInclude Include="mdns_probe_manager.h">
+      <Filter>discovery\mdns</Filter>
+    </ClInclude>
+    <ClInclude Include="mdns_publisher.h">
+      <Filter>discovery\mdns</Filter>
+    </ClInclude>
+    <ClInclude Include="mdns_responder.h">
+      <Filter>discovery\mdns</Filter>
+    </ClInclude>
+    <ClInclude Include="alarm.h">
+      <Filter>util</Filter>
+    </ClInclude>
+    <ClInclude Include="mdns_random.h">
+      <Filter>discovery\mdns</Filter>
+    </ClInclude>
+    <ClInclude Include="mdns_querier.h">
+      <Filter>discovery\mdns</Filter>
+    </ClInclude>
+    <ClInclude Include="mdns_receiver.h">
+      <Filter>discovery\mdns</Filter>
+    </ClInclude>
+    <ClInclude Include="udp_socket.h">
+      <Filter>platform\api</Filter>
+    </ClInclude>
+    <ClInclude Include="udp_packet.h">
+      <Filter>platform\base</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
